# Integralmages

./: README.md
C++/: CMakeLists.txt  CUDAIntegralImage.h  GreyImage.cpp  GreyImage.h  SequentialIntegralImage.h  Tests.h  main.cu
Java/src/: GreyImage.java  Main.java  PartialIntegralImage.java  SumRowIntegralImage.java  parallelTest.java  sequentialTest.java
